Fix book title alignment

--- a/resources/sass/style.scss
+++ b/resources/sass/style.scss
@@ -153,6 +153,9 @@ li {
   float:right;
   max-width:100px;
 }
+.floatleft {
+  float:left;
+}
 
 .book {
   min-height:9.6em;
